2009-10-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: modeEqualSubst(): Better
	type equality.

2009-10-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	History file fixes.
	* src/interp/i-syscmd.boot: readHiFi(): correct a typo.
	histFileName(), restoreHistory(): Do not create trash files.

2009-09-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Aleksej Saushev  <asau@inbox.ru>

	* configure.ac: Fix AF_UNIX/AF_LOCAL test.

2009-09-27  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/Makefile.in, src/algebra/mantepse.spad.pamphlet,
	src/input/mantepse.input.pamphlet: remove superfluous argument R
	from GUESS, fix a mistake in GUESSF1 and add test, make GUESSP
	more general, adjust tests

2009-09-25  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/fffg.spad.pamphlet: make DiffAction work also when
	the desired coefficient is trivially 0.

2009-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add modular framework.
	* src/interp/primitives.lisp: Add macros for modular
	operations.
	src/interp/setq.lisp: U32Vector is optimizable.
	src/algebra/u32vec.spad.pamphlet,
	src/algebra/vecrec.spad.pamphlet: New files.
	src/algebra/boo-pack2.input,
	src/algebra/boo-dom1.input,
	src/algebra/boo-nildom.spad,
	src/algebra/boo-dom2.input,
	src/algebra/boo6.input,
	src/algebra/Makefile.in: Adjust bootstrap.

2009-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Use sbcl as default Lisp.

2009-08-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Speed up conversion of taylor series to polynomials.
	* src/algebra/taylor.spad.pamphlet: univariatePolynomial():
	speed up.

2009-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Speed up array access using Lisp primitives.
	* src/interp/primitives.lisp: New file.
	src/interp/setq.lisp: Add arrays and Matrix to
	'$optimizableConstructorNames'.
	src/interp/g-opt.boot: Instantiate them during compilation.
	src/algebra/Makefile.in, src/algebra/boo6.input: Adjust