@@ -46,6 +46,7 @@ Prerequisities:
     * Closure CL (former openmcl), starting from openmcl 1.1 prerelase
     070512
     * ECL, 0.9j or later
+    * cmucl
   All Lisp impementations should give essentially the same
   functionality, however performance (speed) may differ quite a lot.
   On 64-bit AMD64 on average sbcl is the fastest one (7 times faster
