@@ -47,9 +47,18 @@ expectedSBCL() ==
     messagePrint("specific values             4     (4)              50   (112)")$OutputForm;
     messagePrint("simplification              1     (2)              10    (40)")$OutputForm
    
+expectedCMUCL() ==
+    messagePrint("testsuite | testcases: failed (total) | tests: failed (total)")$OutputForm;
+    messagePrint("inverses                    0     (6)               0   (312)")$OutputForm;
+    messagePrint("branch cuts                 4     (5)              13  (1584)")$OutputForm;
+    messagePrint("singularities               2     (2)               5    (10)")$OutputForm;
+    messagePrint("specific values             4     (4)              50   (112)")$OutputForm;
+    messagePrint("simplification              1     (2)              10    (40)")$OutputForm
+   
 statistics()
 expectedECL()
 expectedSBCL()
+expectedCMUCL()
 @
 
 \subsection{Branch cuts and singularities}
