@@ -1,3 +1,12 @@
+2009-10-09  Anatoly Raportirenko <ram@sunct1.jinr.ru>
+
+	* configure.ac, src/input/elemnum.input.pamphlet,
+	src/interp/htcheck.boot, src/interp/Makefile.in,
+	src/interp/nlib.lisp, src/interp/util.lisp,
+	src/interp/vmlisp.lisp, src/lisp/fricas-lisp.lisp,
+	src/lisp/fricas-package.lisp, src/lisp/Makefile.in,
+	src/scripts/document.in: Support build with cmucl.
+
 2009-10-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/compiler.boot: modeEqualSubst(): Better
